--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="zxx">
 
 <head>
-	<title>Apps Craft - App Landing Page</title>
+	<title>Fundition - WhitePaper</title>
 
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
