--- a/index.html
+++ b/index.html
@@ -252,46 +252,52 @@
 					<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 						<img src="img/funditioninfinite.png" alt="Apps Craft Feature Image">
 
-
+						<span class="apps-craft-feature-ico icon-5x" 
+						data-700-top="top: 215px;transform:translateX(330px) scale(0);"
+						data-500-top="bottom: 61px;transform:translateX(330px) scale(0.8);"
+						data-top="bottom: 61px;transform:translateX(330px) scale(0.8);" >
+							<img src="img/icon/icon-human.png" alt="Small Icon">
+						</span> 
 
 						<span class="apps-craft-feature-ico icon-5x" 
-						data-700-top="opacity: 0; transform: scale(0); top: 148px;transform:translateX(355px);"
-						data-500-top="opacity: 1; transform: scale(1); bottom: 61px;transform:translateX(355px);"
-						data-top="opacity: 1; transform: scale(1); bottom: 61px;transform:translateX(355px);" >
-							<img src="img/icon/icon-donator.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
+						data-650-top="opacity: 0;top: 215px;transform:translateX(330px) scale(0);"
+						data-450-top="opacity: 0.5;bottom: 61px;transform:translateX(330px) scale(0.5);"
+						data-350-top="opacity: 1;bottom: 61px;transform:translateX(530px) scale(0.5);"
+						data-250-top="opacity: 0;bottom: 61px;transform:translateX(530px) scale(0.5);"
+						data-top="bottom: 61px;transform:translateX(530px) scale(0.5);" >
+							<img src="img/icon/icon-money.png" alt="Small Icon">
+						</span> 
 
 						<span class="apps-craft-feature-ico icon-5x" 
-						data-600-top="opacity: 0; transform: scale(0); top: 268px;transform:translateX(888px);"
-						data-450-top="opacity: 1; transform: scale(1); bottom: 61px;transform:translateX(888px);"
-						data-top="opacity: 1; transform: scale(1); bottom: 61px;transform:translateX(888px);" >
-							<img src="img/icon/icon-donator.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
+						data-650-top="top: 215px;transform:translateX(750px) scale(0);"
+						data-450-top="bottom: 61px;transform:translateX(750px) scale(0.8);"
+						data-top="bottom: 61px;transform:translateX(750px) scale(0.8);" >
+							<img src="img/icon/icon-human.png" alt="Small Icon">
+						</span>
 
 						<span class="apps-craft-feature-ico icon-5x" 
-						data-600-top="opacity: 0; transform: scale(0); top: 434px;transform:translateX(288px);"
-						data-450-top="opacity: 1; transform: scale(1); bottom: 61px;transform:translateX(288px);"
-						data-top="opacity: 1; transform: scale(1); bottom: 61px;transform:translateX(288px);" >
-							<img src="img/icon/icon-creator.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						data-600-top="opacity: 0;top: 215px;transform:translateX(750px) scale(0);"
+						data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(750px) scale(0.5);"
+						data-300-top="opacity: 1;bottom: 61px;transform:translateX(570px) scale(0.5);"
+						data-250-top="opacity: 0;bottom: 61px;transform:translateX(570px) scale(0.5);"
+						data-top="bottom: 61px;transform:translateX(570px) scale(0.5);" >
+							<img src="img/icon/icon-idea.png" alt="Small Icon">
+						</span> 
 
 						<span class="apps-craft-feature-ico icon-6x" data-bottom="transform:translateY(830px)" data-top="transform:translateY(-90px);">
 							<img src="img/icon/15.png" alt="Small Icon">
 						</span> <!-- .apps-craft-feature-ico END -->
 
 						<span class="apps-craft-feature-ico icon-7x"   
-						data-350-top="opacity: 0; transform: scale(0); top: 226px;"
-						data-250-top="opacity: 1; transform: scale(1); bottom: 85px;"
-						data-top="opacity: 1; transform: scale(1); bottom: 85px;"  >
+						data-350-top="opacity: 0; transform: scale(0); top: 246px;"
+						data-200-top="opacity: 0; transform: scale(0); top: 246px;"
+						data-100-top="opacity: 1; transform: scale(1); bottom: 65px;" >
 							<img src="img/icon/icon-reward.png" alt="Small Icon">
 						</span> <!-- .apps-craft-feature-ico END -->
 
-						<span class="apps-craft-feature-ico icon-7x"  
-						data-bottom="opacity: 0; transform: scale(1); top: 226px;bottom: 85px;transform:translateX(0px);transform:translateY(0px);" 
-						data-250-top="opacity: 0; transform: scale(0.75); top: 226px;bottom: 85px;transform:translateX(0px);transform:translateY(0px);"
-						data-180-top="opacity: 1; transform: scale(0.75); bottom: 85px;transform:translateX(170px);transform:translateY(250px);"
-						data-top="opacity: 1; transform: scale(0.75); bottom: 85px;transform:translateX(355px);transform:translateY(355px);"  >
+						<span class="apps-craft-feature-ico icon-7x"   
+						data-100-top="opacity: 0; transform:translateY(250px) scale(1); bottom: 65px;" 
+						data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;">
 							<img src="img/icon/icon-reward.png" alt="Small Icon">
 						</span> <!-- .apps-craft-feature-ico END -->
 
@@ -308,7 +314,9 @@
 						</span> <!-- .apps-craft-feature-ico END -->
 
 
-						<span class="apps-craft-feature-ico icon-10x" data-bottom="transform:translateY(226px)" data-top="transform:translateY(26px);">
+						<span class="apps-craft-feature-ico icon-10x" 
+						data-bottom="transform:translateY(226px)" 
+						data-top="transform:translateY(26px);">
 							<img src="img/icon/13.png" alt="Small Icon">
 						</span> <!-- .apps-craft-feature-ico END -->
 
@@ -470,7 +478,24 @@
 
 	<script src="js/main.js"></script>
 	<!-- main.js -->
-
+	<script type="text/javascript">
+		skrollr.init({
+			easing: {
+				sin: function(p) {
+					return (Math.sin(p * Math.PI * 2 - Math.PI/2) + 1) / 2;
+				},
+				cos: function(p) {
+					return (Math.cos(p * Math.PI * 2 - Math.PI/2) + 1) / 2;
+				},
+			},
+			render: function(data) {
+				//Loop
+				if(data.curTop === data.maxTop) {
+					this.setScrollTop(0, true);
+				}
+			}
+		});
+		</script>
 </body>
 
 </html>
