--- a/index.html
+++ b/index.html
@@ -209,26 +209,162 @@
 		<div class="container">
 			<div class="row">
 				<div class="apps-craft-now-available-content wow fadeIn">
-					<div class="apps-craft-section-heading">
+					<div class="apps-craft-section-heading" style="padding-bottom:20px;">
 						<h2>1.0 INTRODUCTION</h2>
 					</div>
-					<p>There were always creators, inventors, geniuses through the history of the humanity. Some did actually create, but for
-						some it started with an idea and it stayed as an idea. We could define few problematics to the question of why it didn’t
-						go beyond the idea and why it didn’t turn into a real thing. The biggest problem may be the funding. Indeed, this question
-						is one of the first one people have to deal with. The creators started to find a way to get money for their projects
-						and that’s how they turned to big money makers and very rich people to help them make their dreams happened. If they
-						had a very good idea, something that could answer to some people’s problems, then the rich people would invest on the
-						project. That’s how these people became the investors. As you are working with someone else money, you had to give
-						reports and give to the investors lots of charts and numbers, and results. Somehow you were working for someone and
-						not for yourself. Then the technology got better and better over the years. People started to have more and more ideas,
-						projects and dreams but they also didn’t want to work for an investor anymore. But the funding problems were still
-						present. That’s when startup started to rise and crowdfunding platforms got into the ocean of websites and started
-						to also rise. That’s how creators, inventors, dreamers started to work without the trouble of having a direct investor.
-						That’s also how people started to believe in the same project and decided to contribute to achieve it. People started
-						to believe that working together, in the same direction, and believing in something is a way to achieve big projects.
-						But the creators, inventors, had another problem which is the deadline. The deadline is putting another pressure to
-						the creators, and that’s how the creators are facing another hardship. Then technology got better and better, that’s
-						how cryptocurrency got its way into our world.</p>
+	
+					<div class="apps-craft-feature-img text-center" itemscope itemtype="http://schema.org/ImageGallery">
+						<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+							<img src="img/introduction-line.png" alt="Apps Craft Feature Image">
+	
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-1000-top="opacity: 0.2;top: 116px;transform:translateX(190px) scale(1);"
+							data-800-top="opacity: 1;bottom: 61px;transform:translateX(190px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(190px) scale(1);" >
+								<img src="img/icon/icon-user.png" alt="Small Icon">
+							</span> 
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-1000-top="opacity: 0;top: 86px;transform:translateX(190px) scale(1);"
+							data-800-top="opacity: 1;bottom: 61px;transform:translateX(190px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(190px) scale(1);" >
+							<span style="color:white;">CREATOR</span>
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-900-top="opacity: 0.2;top: 180px;transform:translateX(310px) scale(1);"
+							data-700-top="opacity: 1;bottom: 61px;transform:translateX(310px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(310px) scale(1);" >
+								<img src="img/icon/icon-search.png" alt="Small Icon">
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-900-top="opacity: 0;top: 150px;transform:translateX(310px) scale(1);"
+							data-700-top="opacity: 1;bottom: 61px;transform:translateX(310px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(310px) scale(1);" >
+							<span style="color:white;">SEARCH</span>
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-800-top="opacity: 0.2;top: 116px;transform:translateX(426px) scale(1);"
+							data-600-top="opacity: 1;bottom: 61px;transform:translateX(426px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(426px) scale(1);" >
+								<img src="img/icon/icon-create.png" alt="Small Icon">
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-800-top="opacity:0;top: 86px;transform:translateX(426px) scale(1);"
+							data-600-top="opacity: 1;bottom: 61px;transform:translateX(426px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(426px) scale(1);" >
+							<span style="color:white;">IDEA</span>
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-700-top="opacity:0.2;top: 180px;transform:translateX(540px) scale(1);"
+							data-500-top="opacity: 1;bottom: 61px;transform:translateX(540px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(540px) scale(1);" >
+								<img src="img/icon/icon-note.png" alt="Small Icon">
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-700-top="opacity:0;top: 150px;transform:translateX(540px) scale(1);"
+							data-500-top="opacity: 1;bottom: 61px;transform:translateX(540px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(540px) scale(1);" >
+							<span style="color:white;">PLAN</span>
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-600-top="opacity:0.2;top: 116px;transform:translateX(652px) scale(1);"
+							data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
+							data-300-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
+							data-200-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
+							data-100-top="opacity: 0.2;bottom: 61px;transform:translateX(652px) scale(1);"
+						 >
+								<img src="img/icon/icon-fund.png" alt="Small Icon">
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-600-top="opacity:0;top: 86px;transform:translateX(652px) scale(1);"
+							data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(652px) scale(1);" >
+							<span style="color:white;">FUND</span>
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-500-top="opacity:0.2;top: 180px;transform:translateX(766px) scale(1);"
+							data-300-top="opacity:0.2;bottom: 61px;transform:translateX(766px) scale(1);"
+							data-100-top="opacity:0.1;bottom: 61px;transform:translateX(766px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(766px) scale(1);" >
+								<img src="img/icon/icon-settings.png" alt="Small Icon">
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-500-top="opacity:0;top: 150px;transform:translateX(766px) scale(1);"
+							data-300-top="opacity:1;bottom: 61px;transform:translateX(766px) scale(1);"
+							data-top="bottom: 61px;transform:translateX(766px) scale(1);" >
+							<span style="color:white;">ACTION</span>
+							</span> 
+	
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-400-top="opacity: 0.2;top: 116px;transform:translateX(886px) scale(1);"
+							data-200-top="opacity:0.2;bottom: 61px;transform:translateX(886px) scale(1);"
+							data-200-top="opacity:0;bottom: 61px;transform:translateX(886px) scale(1);"
+							data-top="opacity:0;bottom: 61px;transform:translateX(886px) scale(1);" >
+								<img src="img/icon/icon-goal.png" alt="Small Icon">
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-400-top="opacity:0;top: 86px;transform:translateX(886px) scale(1);"
+							data-200-top="opacity:1;bottom: 61px;transform:translateX(886px) scale(1);"
+							data-top="opacity:0;bottom: 61px;transform:translateX(886px) scale(1);" >
+							<span style="color:white;">GOAL</span>
+							</span> 
+
+							<span class="apps-craft-feature-ico icon-3x" 
+							data-bottom="transform:translateY(826px)" 
+							data-top="transform:translateY(26px);">
+								<img src="img/icon/13.png" alt="Small Icon">
+							</span>
+							<span class="apps-craft-feature-ico icon-1x" 
+							data-bottom="transform:translateY(280px)" 
+							data-top="transform:translateY(40px);">
+								<img src="img/icon/15.png" alt="Small Icon">
+							</span>
+							<span class="apps-craft-feature-ico icon-10x" 
+							data-bottom="transform:translateY(226px)" 
+							data-top="transform:translateY(26px);">
+								<img src="img/icon/13.png" alt="Small Icon">
+							</span>
+							<span class="apps-craft-feature-ico icon-14x" 
+							data-bottom="transform:translateY(280px)" 
+							data-top="transform:translateY(40px);">
+								<img src="img/icon/15.png" alt="Small Icon">
+							</span> 
+							<span class="apps-craft-feature-ico icon-15x" 
+							data-bottom="transform:translateY(320px)" data-top="transform:translateY(80px);">
+								<img src="img/icon/13.png" alt="Small Icon">
+							</span> 
+						</figure>
+					</div>
+					<p style="padding-top:10px;">
+						There were always creators, inventors, geniuses through the history of the humanity. Some did actually create, 
+						but for some it started with an idea and it stayed just an idea. Most of the time great ideas stay ideas due 
+						to the lack of funding as its sufficient funding that enable ideas to become products and projects. History shows 
+						us that it’s the creators that innovate while the holders of the capital take the idea and earn the large profits 
+						leaving the creators with little return on their idea. When partnering with investors the creatives have to meet 
+						targets set by the investors under strict guidelines and contracts, often the investors require the creative to 
+						provide reports and results which suffocates creativity. 
+					</p>
+					<p>
+						Results driven projects often fail because the creative feels like they are working for someone else rather than 
+						themselves. All creatives understand that through the development of the idea that other opportunities and paths 
+						are discovered which often lead to better products and projects, however the investor wants a fast return on their 
+						investment, leaving the developer no option than to close off innovation to meet the targets set by the investor. 
+						These issues have been recognized for a long time and a myriad of crowd funding platforms have replaced the traditional 
+						investor with public donations of over 16 billion dollars in worldwide crowd funding in 2017. However, this method of 
+						funding projects puts another pressure on the creative inventors, which is the funding must reach its target amount 
+						before an arbitrary deadline in order to receive any funds at all. Which has caused some projects to ask for less 
+						than they need in a hope to reach that target before the end date.
+						</p>
 				</div>
 				<div class="apps-craft-now-available-content wow fadeIn">
 					<div class="apps-craft-section-heading">
@@ -254,11 +390,10 @@
 
 						<span class="apps-craft-feature-ico icon-5x" 
 						data-700-top="top: 215px;transform:translateX(330px) scale(0);"
-						data-500-top="bottom: 61px;transform:translateX(330px) scale(0.8);"
-						data-top="bottom: 61px;transform:translateX(330px) scale(0.8);" >
+						data-500-top="opacity:1;bottom: 61px;transform:translateX(330px) scale(0.8);"
+						data-top="opacity:1;bottom: 61px;transform:translateX(330px) scale(0.8);" >
 							<img src="img/icon/icon-human.png" alt="Small Icon">
 						</span> 
-
 						<span class="apps-craft-feature-ico icon-5x" 
 						data-650-top="opacity: 0;top: 215px;transform:translateX(330px) scale(0);"
 						data-450-top="opacity: 0.5;bottom: 61px;transform:translateX(330px) scale(0.5);"
@@ -267,14 +402,12 @@
 						data-top="bottom: 61px;transform:translateX(530px) scale(0.5);" >
 							<img src="img/icon/icon-money.png" alt="Small Icon">
 						</span> 
-
 						<span class="apps-craft-feature-ico icon-5x" 
 						data-650-top="top: 215px;transform:translateX(750px) scale(0);"
 						data-450-top="bottom: 61px;transform:translateX(750px) scale(0.8);"
 						data-top="bottom: 61px;transform:translateX(750px) scale(0.8);" >
 							<img src="img/icon/icon-human.png" alt="Small Icon">
 						</span>
-
 						<span class="apps-craft-feature-ico icon-5x" 
 						data-600-top="opacity: 0;top: 215px;transform:translateX(750px) scale(0);"
 						data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(750px) scale(0.5);"
@@ -283,54 +416,44 @@
 						data-top="bottom: 61px;transform:translateX(570px) scale(0.5);" >
 							<img src="img/icon/icon-idea.png" alt="Small Icon">
 						</span> 
-
 						<span class="apps-craft-feature-ico icon-6x" data-bottom="transform:translateY(830px)" data-top="transform:translateY(-90px);">
 							<img src="img/icon/15.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span>
 						<span class="apps-craft-feature-ico icon-7x"   
 						data-350-top="opacity: 0; transform: scale(0); top: 246px;"
 						data-200-top="opacity: 0; transform: scale(0); top: 246px;"
 						data-100-top="opacity: 1; transform: scale(1); bottom: 65px;" >
 							<img src="img/icon/icon-reward.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span>
 						<span class="apps-craft-feature-ico icon-7x"   
 						data-100-top="opacity: 0; transform:translateY(250px) scale(1); bottom: 65px;" 
 						data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;">
 							<img src="img/icon/icon-reward.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span>
 						<span class="apps-craft-feature-ico icon-3x" 
 						data-bottom="transform:translateY(826px)" 
 						data-top="transform:translateY(26px);">
 							<img src="img/icon/13.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span>
 						<span class="apps-craft-feature-ico icon-1x" 
 						data-bottom="transform:translateY(280px)" 
 						data-top="transform:translateY(40px);">
 							<img src="img/icon/15.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
-
+						</span>
 						<span class="apps-craft-feature-ico icon-10x" 
 						data-bottom="transform:translateY(226px)" 
 						data-top="transform:translateY(26px);">
 							<img src="img/icon/13.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span>
 						<span class="apps-craft-feature-ico icon-14x" 
 						data-bottom="transform:translateY(280px)" 
 						data-top="transform:translateY(40px);">
 							<img src="img/icon/15.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span> 
 						<span class="apps-craft-feature-ico icon-15x" 
 						data-bottom="transform:translateY(320px)" data-top="transform:translateY(80px);">
 							<img src="img/icon/13.png" alt="Small Icon">
-						</span> <!-- .apps-craft-feature-ico END -->
-
+						</span> 
 					</figure>
 				</div>
 			</div>
