--- a/index.html
+++ b/index.html
@@ -212,7 +212,15 @@
 					<div class="apps-craft-section-heading" style="padding-bottom:20px;">
 						<h2>1.0 INTRODUCTION</h2>
 					</div>
-	
+					<p style="padding-top:10px;">
+						There were always creators, inventors, geniuses through the history of the humanity. Some did actually create, 
+						but for some it started with an idea and it stayed just an idea. Most of the time great ideas stay ideas due 
+						to the lack of funding as its sufficient funding that enable ideas to become products and projects. History shows 
+						us that it’s the creators that innovate while the holders of the capital take the idea and earn the large profits 
+						leaving the creators with little return on their idea. When partnering with investors the creatives have to meet 
+						targets set by the investors under strict guidelines and contracts, often the investors require the creative to 
+						provide reports and results which suffocates creativity. 
+					</p>
 					<div class="apps-craft-feature-img text-center" itemscope itemtype="http://schema.org/ImageGallery">
 						<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 							<img src="img/introduction-line.png" alt="Apps Craft Feature Image">
@@ -277,14 +285,13 @@
 							data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
 							data-300-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
 							data-200-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
-							data-100-top="opacity: 0.2;bottom: 61px;transform:translateX(652px) scale(1);"
-						 >
+							data-100-top="opacity: 0.2;bottom: 61px;transform:translateX(652px) scale(1);">
 								<img src="img/icon/icon-fund.png" alt="Small Icon">
 							</span> 
 
 							<span class="apps-craft-feature-ico icon-1x" 
 							data-600-top="opacity:0;top: 86px;transform:translateX(652px) scale(1);"
-							data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(652px) scale(1);"
+							data-400-top="opacity:1;bottom: 61px;transform:translateX(652px) scale(1);"
 							data-top="bottom: 61px;transform:translateX(652px) scale(1);" >
 							<span style="color:white;">FUND</span>
 							</span> 
@@ -320,13 +327,13 @@
 							</span> 
 
 							<span class="apps-craft-feature-ico icon-3x" 
-							data-bottom="transform:translateY(826px)" 
-							data-top="transform:translateY(26px);">
+							data-bottom="transform:translateY(426px)" 
+							data-top="transform:translateY(-206px);">
 								<img src="img/icon/13.png" alt="Small Icon">
 							</span>
 							<span class="apps-craft-feature-ico icon-1x" 
-							data-bottom="transform:translateY(280px)" 
-							data-top="transform:translateY(40px);">
+							data-bottom="transform:translateY(180px)" 
+							data-top="transform:translateY(-140px);">
 								<img src="img/icon/15.png" alt="Small Icon">
 							</span>
 							<span class="apps-craft-feature-ico icon-10x" 
@@ -345,15 +352,6 @@
 							</span> 
 						</figure>
 					</div>
-					<p style="padding-top:10px;">
-						There were always creators, inventors, geniuses through the history of the humanity. Some did actually create, 
-						but for some it started with an idea and it stayed just an idea. Most of the time great ideas stay ideas due 
-						to the lack of funding as its sufficient funding that enable ideas to become products and projects. History shows 
-						us that it’s the creators that innovate while the holders of the capital take the idea and earn the large profits 
-						leaving the creators with little return on their idea. When partnering with investors the creatives have to meet 
-						targets set by the investors under strict guidelines and contracts, often the investors require the creative to 
-						provide reports and results which suffocates creativity. 
-					</p>
 					<p>
 						Results driven projects often fail because the creative feels like they are working for someone else rather than 
 						themselves. All creatives understand that through the development of the idea that other opportunities and paths 
@@ -384,78 +382,7 @@
 					</p>
 				</div>
 
-				<div class="apps-craft-feature-img text-center" itemscope itemtype="http://schema.org/ImageGallery">
-					<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-						<img src="img/funditioninfinite.png" alt="Apps Craft Feature Image">
-
-						<span class="apps-craft-feature-ico icon-5x" 
-						data-700-top="top: 215px;transform:translateX(330px) scale(0);"
-						data-500-top="opacity:1;bottom: 61px;transform:translateX(330px) scale(0.8);"
-						data-top="opacity:1;bottom: 61px;transform:translateX(330px) scale(0.8);" >
-							<img src="img/icon/icon-human.png" alt="Small Icon">
-						</span> 
-						<span class="apps-craft-feature-ico icon-5x" 
-						data-650-top="opacity: 0;top: 215px;transform:translateX(330px) scale(0);"
-						data-450-top="opacity: 0.5;bottom: 61px;transform:translateX(330px) scale(0.5);"
-						data-350-top="opacity: 1;bottom: 61px;transform:translateX(530px) scale(0.5);"
-						data-250-top="opacity: 0;bottom: 61px;transform:translateX(530px) scale(0.5);"
-						data-top="bottom: 61px;transform:translateX(530px) scale(0.5);" >
-							<img src="img/icon/icon-money.png" alt="Small Icon">
-						</span> 
-						<span class="apps-craft-feature-ico icon-5x" 
-						data-650-top="top: 215px;transform:translateX(750px) scale(0);"
-						data-450-top="bottom: 61px;transform:translateX(750px) scale(0.8);"
-						data-top="bottom: 61px;transform:translateX(750px) scale(0.8);" >
-							<img src="img/icon/icon-human.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-5x" 
-						data-600-top="opacity: 0;top: 215px;transform:translateX(750px) scale(0);"
-						data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(750px) scale(0.5);"
-						data-300-top="opacity: 1;bottom: 61px;transform:translateX(570px) scale(0.5);"
-						data-250-top="opacity: 0;bottom: 61px;transform:translateX(570px) scale(0.5);"
-						data-top="bottom: 61px;transform:translateX(570px) scale(0.5);" >
-							<img src="img/icon/icon-idea.png" alt="Small Icon">
-						</span> 
-						<span class="apps-craft-feature-ico icon-6x" data-bottom="transform:translateY(830px)" data-top="transform:translateY(-90px);">
-							<img src="img/icon/15.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-7x"   
-						data-350-top="opacity: 0; transform: scale(0); top: 246px;"
-						data-200-top="opacity: 0; transform: scale(0); top: 246px;"
-						data-100-top="opacity: 1; transform: scale(1); bottom: 65px;" >
-							<img src="img/icon/icon-reward.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-7x"   
-						data-100-top="opacity: 0; transform:translateY(250px) scale(1); bottom: 65px;" 
-						data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;">
-							<img src="img/icon/icon-reward.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-3x" 
-						data-bottom="transform:translateY(826px)" 
-						data-top="transform:translateY(26px);">
-							<img src="img/icon/13.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-1x" 
-						data-bottom="transform:translateY(280px)" 
-						data-top="transform:translateY(40px);">
-							<img src="img/icon/15.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-10x" 
-						data-bottom="transform:translateY(226px)" 
-						data-top="transform:translateY(26px);">
-							<img src="img/icon/13.png" alt="Small Icon">
-						</span>
-						<span class="apps-craft-feature-ico icon-14x" 
-						data-bottom="transform:translateY(280px)" 
-						data-top="transform:translateY(40px);">
-							<img src="img/icon/15.png" alt="Small Icon">
-						</span> 
-						<span class="apps-craft-feature-ico icon-15x" 
-						data-bottom="transform:translateY(320px)" data-top="transform:translateY(80px);">
-							<img src="img/icon/13.png" alt="Small Icon">
-						</span> 
-					</figure>
-				</div>
+			
 			</div>
 		</div>
 	</section>
@@ -534,7 +461,78 @@
 			</div>
 		</div>
 	</section>
+	<div class="apps-craft-feature-img text-center" itemscope itemtype="http://schema.org/ImageGallery">
+		<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+			<img src="img/funditioninfinite.png" alt="Apps Craft Feature Image">
 
+			<span class="apps-craft-feature-ico icon-5x" 
+			data-700-top="top: 215px;transform:translateX(330px) scale(0);"
+			data-500-top="opacity:1;bottom: 61px;transform:translateX(330px) scale(0.8);"
+			data-top="opacity:1;bottom: 61px;transform:translateX(330px) scale(0.8);" >
+				<img src="img/icon/icon-human.png" alt="Small Icon">
+			</span> 
+			<span class="apps-craft-feature-ico icon-5x" 
+			data-650-top="opacity: 0;top: 215px;transform:translateX(330px) scale(0);"
+			data-450-top="opacity: 0.5;bottom: 61px;transform:translateX(330px) scale(0.5);"
+			data-350-top="opacity: 1;bottom: 61px;transform:translateX(530px) scale(0.5);"
+			data-250-top="opacity: 0;bottom: 61px;transform:translateX(530px) scale(0.5);"
+			data-top="bottom: 61px;transform:translateX(530px) scale(0.5);" >
+				<img src="img/icon/icon-money.png" alt="Small Icon">
+			</span> 
+			<span class="apps-craft-feature-ico icon-5x" 
+			data-650-top="top: 215px;transform:translateX(750px) scale(0);"
+			data-450-top="bottom: 61px;transform:translateX(750px) scale(0.8);"
+			data-top="bottom: 61px;transform:translateX(750px) scale(0.8);" >
+				<img src="img/icon/icon-human.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-5x" 
+			data-600-top="opacity: 0;top: 215px;transform:translateX(750px) scale(0);"
+			data-400-top="opacity: 0.5;bottom: 61px;transform:translateX(750px) scale(0.5);"
+			data-300-top="opacity: 1;bottom: 61px;transform:translateX(570px) scale(0.5);"
+			data-250-top="opacity: 0;bottom: 61px;transform:translateX(570px) scale(0.5);"
+			data-top="bottom: 61px;transform:translateX(570px) scale(0.5);" >
+				<img src="img/icon/icon-idea.png" alt="Small Icon">
+			</span> 
+			<span class="apps-craft-feature-ico icon-6x" data-bottom="transform:translateY(830px)" data-top="transform:translateY(-90px);">
+				<img src="img/icon/15.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-7x"   
+			data-350-top="opacity: 0; transform: scale(0); top: 246px;"
+			data-200-top="opacity: 0; transform: scale(0); top: 246px;"
+			data-100-top="opacity: 1; transform: scale(1); bottom: 65px;" >
+				<img src="img/icon/icon-reward.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-7x"   
+			data-100-top="opacity: 0; transform:translateY(250px) scale(1); bottom: 65px;" 
+			data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;">
+				<img src="img/icon/icon-reward.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-3x" 
+			data-bottom="transform:translateY(826px)" 
+			data-top="transform:translateY(26px);">
+				<img src="img/icon/13.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-1x" 
+			data-bottom="transform:translateY(280px)" 
+			data-top="transform:translateY(40px);">
+				<img src="img/icon/15.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-10x" 
+			data-bottom="transform:translateY(226px)" 
+			data-top="transform:translateY(26px);">
+				<img src="img/icon/13.png" alt="Small Icon">
+			</span>
+			<span class="apps-craft-feature-ico icon-14x" 
+			data-bottom="transform:translateY(280px)" 
+			data-top="transform:translateY(40px);">
+				<img src="img/icon/15.png" alt="Small Icon">
+			</span> 
+			<span class="apps-craft-feature-ico icon-15x" 
+			data-bottom="transform:translateY(320px)" data-top="transform:translateY(80px);">
+				<img src="img/icon/13.png" alt="Small Icon">
+			</span> 
+		</figure>
+	</div>
 
 
 	<!-- Apps Craft Footer Section -->
