--- a/index.html
+++ b/index.html
@@ -714,10 +714,22 @@
 						 data-150-top="opacity: 1; transform: scale(1); bottom: 65px;">
 							<img src="img/icon/icon-fnd.png" alt="Small Icon">
 						</span>
-						<span class="fundition-feature-ico icon-7x" data-100-top="opacity: 0; transform:translateY(250px) scale(1); bottom: 65px;"
-						 data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;">
+						<span class="fundition-feature-ico icon-7x" 
+						data-100-top="opacity: 0; transform:translateY(250px) scale(1); bottom: 65px;"
+						 data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;"
+						 data-50-end="opacity: 1; transform:translateY(1850px) scale(1); bottom: 65px;"
+						 data-60-end="opacity: 1; transform:translateY(1850px) scale(1); bottom: 65px;"
+						 data-61-end="opacity: 1; transform:translateY(1850px) scale(1); bottom: 65px;">
 							<img src="img/icon/icon-reward.png" alt="Small Icon">
 						</span>
+
+						<span class="fundition-feature-ico"  
+						data-100-top="opacity: 0; transform:translateY(650px) scale(1); bottom: 65px;left: 35%;"
+						 data-top="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;left: 35%;"
+						 data--50-end="opacity: 1; transform:translateY(650px) scale(1); bottom: 65px;left: 35%;">
+						 <h1 style="color:white;left:0px;">BOTH GET REWARDED</h1>
+						</span>
+
 						<span class="fundition-feature-ico icon-3x" data-bottom="transform:translateY(826px)" data-top="transform:translateY(26px);">
 							<img src="img/icon/13.png" alt="Small Icon">
 						</span>
@@ -742,7 +754,7 @@
 
 	<!-- SOLUTION -->
 	<section class="fundition-feature-section section-padding" id="fundition-solution">
-		<div class="container">
+		<div class="container" style="padding-top:700px;">
 			<div class="row">
 				<div class="fundition-now-available-content wow fadeIn">
 					<div class="fundition-section-heading">
